# kave-v2

./: .coverage 2  .coverage 3  .coverage 5  .env  .env.example  .flake8  .gitignore  .mypy.ini  .watchignore  AWS_DEPLOYMENT_PLAN.md  Aptfile  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  HEROKU_DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  MAILCHIMP_WEBHOOK_SETUP.md  POSTGRESQL_DEPLOYMENT_GUIDE.md  Procfile  README.md  REFACTORING_EMAIL_WEBHOOKS.md  REFACTORING_PLAN.md  REFACTORING_PLAN_AI.md  REFACTORING_PLAN_B.md  S3_DEPLOYMENT_GUIDE.md  S3_STORAGE_IMPLEMENTATION.md  SIGNATURE_DEBUGGING.md  add_docstrings.py  alembic.ini  api_refactoring_plan.md  check_heroku_ocr.py  check_s3.py  check_task_queue.py  coverage.xml  debug_webhook.py  dev 2.db-journal  dev.db  fix_else_after_return.py  fix_logging.py  fix_migration.py  fix_migration_heroku.py  (+29 more)
.cursor/: settings.json  snippets.json
.cursor/rules/: development_rules.mdc  project-rules.mdc  pydantic-ai-docs.mdc
alembic/: README  env.py
alembic/versions/: 0815edbd2640_add_test_column.py  1139e0980984_add_attachmenttextcontent_model.py  136d5ef8e384_add_organization_model.py  3d17b3a3f001_add_unique_constraint_to_mandrill_.py  443a8e83492a_add_users_table.py  7b40d1074b24_add_unique_constraint_to_mandrill_.py  9388bd8f46d0_test_alembic_functionality.py  d2c4eb2be839_initial_migration.py  daf60e35187d_fix_unique_constraint_for_postgres.py
app/: __init__.py  main.py  main_fixed.py
app/api/: deps.py
app/api/endpoints/: attachments.py  email_webhooks.py
app/api/v1/: __init__.py  deps.py
app/core/: __init__.py  config.py  redis.py
app/db/: session.py  session_management.py
app/db/migrations/: migrate_storage_uri.py  remove_attachment_content.py
app/integrations/email/: __init__.py  client.py  models.py
app/models/: __init__.py  attachment_text_content.py  email_data.py  organization.py  user.py
app/schemas/: __init__.py  auth_schemas.py  organization_schemas.py  webhook_schemas.py
app/services/: __init__.py  attachment_service.py  email_processing_service.py  email_service.py  initialization_service.py  organization_service.py  storage_service.py  user_service.py
app/static/pages/: ctpat.html  print.html
app/tests/: TESTING_STRATEGY.md  conftest.py  create_sample_pdf.py  test_models.py  test_redis.py  test_session_refactoring.py  test_simple_db.py
app/tests/test_data/: mock_webhook.json  mock_webhook_with_attachment.json  test 2.db-journal  test 3.db-journal  test 4.db-journal  test 5.db-journal
app/tests/test_e2e/: __init__.py  test_webhook_flow.py
app/tests/test_integration/: test_application_lifecycle.py  test_main.py  test_migrations.py  test_ocr_workflow.py  test_webhook.py  test_webhook_with_attachment.py
app/tests/test_unit/: test_initialization_service.py  test_models.py  test_models_documentation.py
app/worker/: __init__.py  celery_app.py  tasks.py
docs/: changelog.md  ngrok_webhook_testing.md  refactoring-plan-v3.md  refactoring-plan.md  session-management-refactoring-plan.md  webhook-secret-refactoring-plan.md
docs/deployment/: heroku.md
docs/implementation/: implement_signature.md  ocr-plan-v2.md  ocr-plan.md  refactoring-plan-v3.md
docs/implementation/steps/: step01-dependencies.md  step02-models.md  step03-migration.md  step04-task-structure.md  step05-fetch-data.md  step06-pdf-parsing.md  step07-text-extraction.md  step08-ocr-fallback.md  step09-error-handling.md  step10-trigger-task.md  step11-integration-testing.md  step12-documentation.md
examples/: README.md  redis_api_client.py  redis_example.py  simplified_app.py  test_db_connection.py
kave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: rungit.txt  rungitheroku.txt  runtests.txt
requirements/: base.in  base.txt  dev.in  dev.txt  integrations.in  integrations.txt
scripts/: __init__.py  check_db_url.py  create_superuser.py  migrate_storage_uri.py  pg_connection_test.py  remove_attachment_content.py  run_remove_attachment_content.py  s3_connection_test.py  setup_postgres.py  simple_ngrok.py  start_local_with_webhook.py  start_ngrok.py  test_organization.py  verify_production_db.py
scripts/tests/: test_signature.py  test_webhook.py  webhook_test.py
test/: test_ngrok.py
(+56 files in other folders)
