[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
skip = ["venv", "venv_new", ".env", ".venv"]
skip_glob = ["*/venv/*", "*/venv_new/*"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "app.integrations.email.models",
    "app.db.session_management"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "app.tests.*"]
# Still allowing untyped tests but requiring more type safety
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*" 